skills section alignment fixed

--- a/style.css
+++ b/style.css
@@ -371,6 +371,7 @@ h6 {
   font-weight: bold;
   line-height: 29px;
   text-align: center;
+  padding: 0;
 }
 
 .skills-color-text {
